--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:37:56 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:38:39 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -181,7 +181,7 @@ E thru 7</td>
       <td>Will Zalatoris -2
 -2 thru 8</td>
       <td>Hideki Matsuyama E
-E thru 17</td>
+E (F)</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 7</td>
       <td class="greyout">Jordan Spieth +1
@@ -198,10 +198,10 @@ E thru 17</td>
 -1 thru 12</td>
       <td>Viktor Hovland(W) E
 E thru 7</td>
-      <td class="greyout leftborder">Sam Burns +1
-+1 thru 9</td>
-      <td class="greyout">Tyrrell Hatton +1
-+1 thru 9</td>
+      <td class="greyout leftborder">Tyrrell Hatton +1
++1 thru 10</td>
+      <td class="greyout">Sam Burns +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
@@ -324,10 +324,10 @@ E thru 7</td>
 -4 thru 17</td>
       <td>Brooks Koepka E
 E thru 7</td>
-      <td>Sam Burns +1
-+1 thru 9</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
+      <td>Patrick Cantlay +1
 +1 thru 8</td>
+      <td class="greyout leftborder">Sam Burns +2
++2 thru 10</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
     </tr>
@@ -344,8 +344,8 @@ E thru 7</td>
 E thru 7</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +3
-+3 thru 17</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -376,8 +376,8 @@ E thru 7</td>
 +1 thru 8</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +3
-+3 thru 17</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
@@ -422,10 +422,10 @@ E thru 7</td>
 E thru 7</td>
       <td>Jon Rahm(W) +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Sam Burns +1
-+1 thru 9</td>
-      <td class="greyout">Xander Schauffele +1
+      <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 7</td>
+      <td class="greyout">Sam Burns +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
@@ -438,10 +438,10 @@ E thru 7</td>
 -1 (F)</td>
       <td>Jon Rahm(W) +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Sam Burns +1
-+1 thru 9</td>
-      <td class="greyout">Xander Schauffele +1
+      <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 7</td>
+      <td class="greyout">Sam Burns +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -456,8 +456,8 @@ E thru 7</td>
 +1 thru 8</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 7</td>
-      <td class="greyout">Justin Thomas(W) +3
-+3 thru 17</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">The Resort</td>
@@ -469,7 +469,7 @@ E thru 7</td>
       <td>Viktor Hovland E
 E thru 7</td>
       <td>Hideki Matsuyama E
-E thru 17</td>
+E (F)</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
       <td class="greyout">Jon Rahm +1
@@ -487,7 +487,7 @@ E (F)</td>
       <td>Brooks Koepka E
 E thru 7</td>
       <td class="greyout leftborder">Hideki Matsuyama E
-E thru 17</td>
+E (F)</td>
       <td class="greyout">Jon Rahm(W) +1
 +1 thru 8</td>
     </tr>
@@ -502,8 +502,8 @@ E thru 17</td>
 E thru 7</td>
       <td>Xander Schauffele +1
 +1 thru 7</td>
-      <td class="greyout leftborder">Justin Thomas(W) +3
-+3 thru 17</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
++4 (F)</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
     </tr>
@@ -517,11 +517,11 @@ E thru 7</td>
       <td>Rory McIlroy(W) E
 E thru 7</td>
       <td>Hideki Matsuyama E
-E thru 17</td>
+E (F)</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 7</td>
-      <td class="greyout">Justin Thomas +3
-+3 thru 17</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -534,10 +534,10 @@ E thru 17</td>
 E thru 7</td>
       <td>Patrick Cantlay(W) +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Sam Burns +1
-+1 thru 9</td>
-      <td class="greyout">Jon Rahm +1
+      <td class="greyout leftborder">Jon Rahm +1
 +1 thru 8</td>
+      <td class="greyout">Sam Burns +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -552,8 +552,8 @@ E thru 7</td>
 +1 thru 7</td>
       <td class="greyout leftborder">Jordan Spieth +1
 +1 thru 7</td>
-      <td class="greyout">Justin Thomas +3
-+3 thru 17</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -579,13 +579,13 @@ E thru 7</td>
       <td>Corey Conners -1
 -1 thru 12</td>
       <td>Hideki Matsuyama E
-E thru 17</td>
+E (F)</td>
       <td>Xander Schauffele +1
 +1 thru 7</td>
       <td class="greyout leftborder">Marc Leishman +2
 +2 thru 10</td>
-      <td class="greyout">Justin Thomas +3
-+3 thru 17</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -632,8 +632,8 @@ E thru 7</td>
 +1 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +1
 +1 thru 7</td>
-      <td class="greyout">Justin Thomas(W) +3
-+3 thru 17</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -648,8 +648,8 @@ E thru 7</td>
 +1 thru 8</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 7</td>
-      <td class="greyout">Justin Thomas(W) +3
-+3 thru 17</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -696,8 +696,8 @@ E thru 7</td>
 E thru 7</td>
       <td class="greyout leftborder">Collin Morikawa +2
 +2 thru 9</td>
-      <td class="greyout">Justin Thomas +3
-+3 thru 17</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
@@ -712,8 +712,8 @@ E thru 7</td>
 E thru 7</td>
       <td class="greyout leftborder">Jon Rahm +1
 +1 thru 8</td>
-      <td class="greyout">Justin Thomas(W) +3
-+3 thru 17</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
@@ -744,8 +744,8 @@ E thru 7</td>
 +1 thru 8</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +3
-+3 thru 17</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -758,8 +758,8 @@ E thru 7</td>
 E thru 7</td>
       <td>Shane Lowry(W) +1
 +1 (F)</td>
-      <td class="greyout leftborder">Sam Burns +1
-+1 thru 9</td>
+      <td class="greyout leftborder">Sam Burns +2
++2 thru 10</td>
       <td class="greyout">Brian Harman +2
 +2 (F)</td>
     </tr>
@@ -792,24 +792,8 @@ E thru 7</td>
 +1 thru 7</td>
       <td class="greyout leftborder">Jordan Spieth +1
 +1 thru 7</td>
-      <td class="greyout">Justin Thomas(W) +3
-+3 thru 17</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Benjac</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Rory McIlroy E
-E thru 7</td>
-      <td>Sam Burns +1
-+1 thru 9</td>
-      <td>Xander Schauffele +1
-+1 thru 7</td>
-      <td class="greyout leftborder">Justin Thomas(W) +3
-+3 thru 17</td>
-      <td class="greyout">Justin Rose +4
-+4 thru 13</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -836,12 +820,12 @@ E thru 7</td>
 E thru 7</td>
       <td>Jordan Spieth(W) +1
 +1 thru 7</td>
-      <td>Sam Burns +1
-+1 thru 9</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
+      <td>Patrick Cantlay +1
 +1 thru 8</td>
-      <td class="greyout">Jon Rahm +1
+      <td class="greyout leftborder">Jon Rahm +1
 +1 thru 8</td>
+      <td class="greyout">Sam Burns +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
@@ -856,8 +840,24 @@ E thru 7</td>
 +1 thru 8</td>
       <td class="greyout leftborder">Jordan Spieth +1
 +1 thru 7</td>
-      <td class="greyout">Justin Thomas +3
-+3 thru 17</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Benjac</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Rory McIlroy E
+E thru 7</td>
+      <td>Xander Schauffele +1
++1 thru 7</td>
+      <td>Sam Burns +2
++2 thru 10</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
++4 (F)</td>
+      <td class="greyout">Justin Rose +4
++4 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -882,14 +882,14 @@ E thru 7</td>
 -2 thru 8</td>
       <td>Viktor Hovland E
 E thru 7</td>
-      <td>Sam Burns +1
-+1 thru 9</td>
       <td>Jon Rahm +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +1
+      <td>Jordan Spieth +1
 +1 thru 7</td>
-      <td class="greyout">Justin Thomas(W) +3
-+3 thru 17</td>
+      <td class="greyout leftborder">Sam Burns +2
++2 thru 10</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -920,8 +920,8 @@ E thru 7</td>
 +1 thru 8</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 7</td>
-      <td class="greyout">Justin Thomas(W) +3
-+3 thru 17</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -934,10 +934,10 @@ E thru 7</td>
 E thru 7</td>
       <td>Collin Morikawa(W) +2
 +2 thru 9</td>
-      <td class="greyout leftborder">Justin Thomas +3
-+3 thru 17</td>
-      <td class="greyout">Gary Woodland +3
+      <td class="greyout leftborder">Gary Woodland +3
 +3 thru 13</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Brian McDonald</td>
@@ -952,8 +952,8 @@ E thru 7</td>
 +1 thru 7</td>
       <td class="greyout leftborder">Jordan Spieth +1
 +1 thru 7</td>
-      <td class="greyout">Justin Thomas +3
-+3 thru 17</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
@@ -966,9 +966,9 @@ E thru 7</td>
 +1 thru 8</td>
       <td>Xander Schauffele +1
 +1 thru 7</td>
-      <td class="greyout leftborder">Justin Thomas +3
-+3 thru 17</td>
-      <td class="greyout">Louis Oosthuizen +4
+      <td class="greyout leftborder">Louis Oosthuizen +4
++4 (F)</td>
+      <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
     <tr>
@@ -984,8 +984,8 @@ E thru 7</td>
 +1 thru 7</td>
       <td class="greyout leftborder">Jordan Spieth +1
 +1 thru 7</td>
-      <td class="greyout">Justin Thomas(W) +3
-+3 thru 17</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -1009,15 +1009,15 @@ E thru 7</td>
       <td>Brooks Koepka E
 E thru 7</td>
       <td>Hideki Matsuyama E
-E thru 17</td>
+E (F)</td>
       <td>Jon Rahm(W) +1
 +1 thru 8</td>
       <td>Patrick Cantlay +1
 +1 thru 8</td>
       <td class="greyout leftborder">Jordan Spieth +1
 +1 thru 7</td>
-      <td class="greyout">Justin Thomas +3
-+3 thru 17</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
@@ -1032,14 +1032,14 @@ E thru 7</td>
 +1 thru 8</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 7</td>
-      <td class="greyout">Justin Thomas +3
-+3 thru 17</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
       <td class="bigbold">3</td>
       <td>Hideki Matsuyama E
-E thru 17</td>
+E (F)</td>
       <td>Patrick Cantlay +1
 +1 thru 8</td>
       <td>Jon Rahm +1
@@ -1064,8 +1064,8 @@ E thru 7</td>
 +1 thru 7</td>
       <td class="greyout leftborder">Collin Morikawa +2
 +2 thru 9</td>
-      <td class="greyout">Justin Thomas(W) +3
-+3 thru 17</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
@@ -1078,8 +1078,8 @@ E thru 7</td>
 +1 thru 7</td>
       <td>Jordan Spieth +1
 +1 thru 7</td>
-      <td class="greyout leftborder">Justin Thomas(W) +3
-+3 thru 17</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
++4 (F)</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
     </tr>
