--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:37:56 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:38:39 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,10 +150,10 @@ body {
 -1 thru 12</td>
       <td>Xander Schauffele +1
 +1 thru 7</td>
-      <td class="greyout leftborder">Sam Burns +1
-+1 thru 9</td>
-      <td class="greyout">Jordan Spieth +1
+      <td class="greyout leftborder">Jordan Spieth +1
 +1 thru 7</td>
+      <td class="greyout">Sam Burns +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -168,8 +168,8 @@ E thru 7</td>
 E thru 7</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
 +3 (F)</td>
-      <td class="greyout">Justin Thomas +3
-+3 thru 17</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -184,8 +184,8 @@ E thru 7</td>
 E thru 7</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +3
-+3 thru 17</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
@@ -200,8 +200,8 @@ E thru 7</td>
 +1 thru 8</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +3
-+3 thru 17</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -232,8 +232,8 @@ E thru 7</td>
 E thru 7</td>
       <td class="greyout leftborder">Collin Morikawa +2
 +2 thru 9</td>
-      <td class="greyout">Justin Thomas(W) +3
-+3 thru 17</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -248,8 +248,8 @@ E thru 7</td>
 +1 thru 7</td>
       <td class="greyout leftborder">Jordan Spieth +1
 +1 thru 7</td>
-      <td class="greyout">Justin Thomas +3
-+3 thru 17</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
@@ -278,8 +278,8 @@ E thru 7</td>
 +1 thru 7</td>
       <td>Russell Henley +1
 +1 thru 12</td>
-      <td class="greyout leftborder">Justin Thomas +3
-+3 thru 17</td>
+      <td class="greyout leftborder">Justin Thomas +4
++4 (F)</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
     </tr>
@@ -296,8 +296,8 @@ E thru 7</td>
 +1 thru 8</td>
       <td class="greyout leftborder">Collin Morikawa +2
 +2 thru 9</td>
-      <td class="greyout">Justin Thomas +3
-+3 thru 17</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -357,11 +357,11 @@ E thru 7</td>
       <td>Patrick Cantlay +1
 +1 thru 8</td>
       <td>Tyrrell Hatton +1
-+1 thru 9</td>
++1 thru 10</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout">Justin Thomas(W) +3
-+3 thru 17</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
@@ -374,8 +374,8 @@ E thru 7</td>
 +1 thru 7</td>
       <td>Jordan Spieth +1
 +1 thru 7</td>
-      <td class="greyout leftborder">Justin Thomas(W) +3
-+3 thru 17</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
++4 (F)</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
     </tr>
