--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:41:31 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:42:14 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -184,8 +184,8 @@ E thru 7</td>
 E (F)</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 8</td>
-      <td class="greyout">Jordan Spieth +1
-+1 thru 7</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 2</td>
@@ -312,8 +312,8 @@ E thru 7</td>
 E thru 7</td>
       <td class="greyout leftborder">Jon Rahm +1
 +1 thru 8</td>
-      <td class="greyout">Jordan Spieth +1
-+1 thru 7</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">BCREAMED</td>
@@ -408,8 +408,8 @@ E thru 7</td>
 +1 thru 8</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 8</td>
-      <td class="greyout">Jordan Spieth +1
-+1 thru 7</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Barb Wellard</td>
@@ -550,8 +550,8 @@ E thru 7</td>
 E thru 7</td>
       <td>Xander Schauffele +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 7</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 8</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -598,8 +598,8 @@ E (F)</td>
 -1 thru 7</td>
       <td>Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 7</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 8</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
     </tr>
@@ -630,8 +630,8 @@ E thru 7</td>
 E thru 7</td>
       <td>Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 7</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 8</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -664,8 +664,8 @@ E thru 7</td>
 +1 thru 8</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 8</td>
-      <td class="greyout">Jordan Spieth +1
-+1 thru 7</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
@@ -726,8 +726,8 @@ E thru 7</td>
 E thru 7</td>
       <td>Jon Rahm(W) +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 7</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 8</td>
       <td class="greyout">Bubba Watson +2
 +2 thru 11</td>
     </tr>
@@ -776,8 +776,8 @@ E thru 7</td>
 +1 thru 8</td>
       <td class="greyout leftborder">Jon Rahm +1
 +1 thru 8</td>
-      <td class="greyout">Jordan Spieth +1
-+1 thru 7</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Philip Dale</td>
@@ -790,8 +790,8 @@ E thru 7</td>
 +1 thru 8</td>
       <td>Xander Schauffele +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 7</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 8</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -804,12 +804,12 @@ E thru 7</td>
 E thru 7</td>
       <td>Brooks Koepka E
 E thru 7</td>
-      <td>Jordan Spieth(W) +1
-+1 thru 7</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
+      <td>Patrick Cantlay +1
 +1 thru 8</td>
-      <td class="greyout">Jon Rahm +1
+      <td class="greyout leftborder">Jon Rahm +1
 +1 thru 8</td>
+      <td class="greyout">Jordan Spieth(W) +2
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Neville Spillman</td>
@@ -818,12 +818,12 @@ E thru 7</td>
 -4 thru 17</td>
       <td>Brooks Koepka E
 E thru 7</td>
-      <td>Jordan Spieth(W) +1
-+1 thru 7</td>
       <td>Patrick Cantlay +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Jon Rahm +1
+      <td>Jon Rahm +1
 +1 thru 8</td>
+      <td class="greyout leftborder">Jordan Spieth(W) +2
++2 thru 8</td>
       <td class="greyout">Sam Burns +2
 +2 thru 10</td>
     </tr>
@@ -838,8 +838,8 @@ E thru 7</td>
 E thru 7</td>
       <td>Jon Rahm(W) +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 7</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 8</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -876,38 +876,6 @@ E thru 7</td>
 +2 thru 9</td>
     </tr>
     <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">0</td>
-      <td>Will Zalatoris -2
--2 thru 8</td>
-      <td>Viktor Hovland E
-E thru 7</td>
-      <td>Jon Rahm +1
-+1 thru 8</td>
-      <td>Jordan Spieth +1
-+1 thru 7</td>
-      <td class="greyout leftborder">Sam Burns +2
-+2 thru 10</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">0</td>
-      <td>Corey Conners(W) -1
--1 thru 12</td>
-      <td>Daniel Berger -1
--1 (F)</td>
-      <td>Jon Rahm +1
-+1 thru 8</td>
-      <td>Jordan Spieth +1
-+1 thru 7</td>
-      <td class="greyout leftborder">Robert MacIntyre +2
-+2 thru 14</td>
-      <td class="greyout">Collin Morikawa +2
-+2 thru 9</td>
-    </tr>
-    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">1</td>
       <td>Daniel Berger -1
@@ -922,6 +890,38 @@ E thru 7</td>
 +1 thru 8</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">1</td>
+      <td>Will Zalatoris -2
+-2 thru 8</td>
+      <td>Viktor Hovland E
+E thru 7</td>
+      <td>Jon Rahm +1
++1 thru 8</td>
+      <td>Sam Burns +2
++2 thru 10</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 8</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">1</td>
+      <td>Corey Conners(W) -1
+-1 thru 12</td>
+      <td>Daniel Berger -1
+-1 (F)</td>
+      <td>Jon Rahm +1
++1 thru 8</td>
+      <td>Robert MacIntyre +2
++2 thru 14</td>
+      <td class="greyout leftborder">Collin Morikawa +2
++2 thru 9</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -950,8 +950,8 @@ E thru 7</td>
 +1 thru 8</td>
       <td>Xander Schauffele +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 7</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 8</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -982,26 +982,10 @@ E thru 7</td>
 +1 thru 8</td>
       <td>Xander Schauffele +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 7</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 8</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">2</td>
-      <td>Viktor Hovland(W) E
-E thru 7</td>
-      <td>Brooks Koepka E
-E thru 7</td>
-      <td>Jon Rahm +1
-+1 thru 8</td>
-      <td>Jordan Spieth +1
-+1 thru 7</td>
-      <td class="greyout leftborder">Collin Morikawa +2
-+2 thru 9</td>
-      <td class="greyout">Patrick Reed +3
-+3 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
@@ -1014,8 +998,8 @@ E (F)</td>
 +1 thru 8</td>
       <td>Patrick Cantlay +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 7</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 8</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -1036,48 +1020,64 @@ E thru 7</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">3</td>
+      <td>Viktor Hovland(W) E
+E thru 7</td>
+      <td>Brooks Koepka E
+E thru 7</td>
+      <td>Jon Rahm +1
++1 thru 8</td>
+      <td>Collin Morikawa +2
++2 thru 9</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 8</td>
+      <td class="greyout">Patrick Reed +3
++3 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">4</td>
       <td>Hideki Matsuyama E
 E (F)</td>
       <td>Patrick Cantlay +1
 +1 thru 8</td>
       <td>Jon Rahm +1
 +1 thru 8</td>
-      <td>Jordan Spieth +1
-+1 thru 7</td>
-      <td class="greyout leftborder">Collin Morikawa(W) +2
+      <td>Collin Morikawa(W) +2
 +2 thru 9</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 8</td>
       <td class="greyout">Paul Casey
 Out With Injury</td>
     </tr>
     <tr>
       <td class="bigbold">NewCastle Magpies</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">4</td>
       <td>Brooks Koepka E
 E thru 7</td>
       <td>Patrick Cantlay +1
 +1 thru 8</td>
       <td>Xander Schauffele +1
 +1 thru 8</td>
-      <td>Jordan Spieth +1
-+1 thru 7</td>
-      <td class="greyout leftborder">Collin Morikawa +2
+      <td>Collin Morikawa +2
 +2 thru 9</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 8</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">4</td>
       <td>Viktor Hovland E
 E thru 7</td>
       <td>Jon Rahm +1
 +1 thru 8</td>
       <td>Xander Schauffele +1
 +1 thru 8</td>
-      <td>Jordan Spieth +1
-+1 thru 7</td>
+      <td>Jordan Spieth +2
++2 thru 8</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 +4 (F)</td>
       <td class="greyout">Louis Oosthuizen +4
