--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:41:31 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:42:14 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,10 +150,10 @@ body {
 -1 thru 12</td>
       <td>Xander Schauffele +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 7</td>
-      <td class="greyout">Sam Burns +2
+      <td class="greyout leftborder">Sam Burns +2
 +2 thru 10</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -214,10 +214,10 @@ E thru 7</td>
 E thru 7</td>
       <td>Jon Rahm +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 7</td>
-      <td class="greyout">Shane Lowry +1
+      <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -246,8 +246,8 @@ E thru 7</td>
 E thru 7</td>
       <td>Xander Schauffele +1
 +1 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 7</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 8</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -308,28 +308,12 @@ E thru 7</td>
 E thru 7</td>
       <td>Brooks Koepka E
 E thru 7</td>
-      <td>Jordan Spieth(W) +1
-+1 thru 7</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
+      <td>Patrick Cantlay +1
 +1 thru 8</td>
-      <td class="greyout">Jon Rahm +1
+      <td class="greyout leftborder">Jon Rahm +1
 +1 thru 8</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">0</td>
-      <td>Corey Conners(W) -1
--1 thru 12</td>
-      <td>Daniel Berger -1
--1 (F)</td>
-      <td>Jon Rahm +1
-+1 thru 8</td>
-      <td>Jordan Spieth +1
-+1 thru 7</td>
-      <td class="greyout leftborder">Collin Morikawa +2
-+2 thru 9</td>
-      <td class="greyout">Robert MacIntyre +2
-+2 thru 14</td>
+      <td class="greyout">Jordan Spieth(W) +2
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -340,12 +324,28 @@ E thru 7</td>
 E thru 7</td>
       <td>Jon Rahm(W) +1
 +1 thru 8</td>
-      <td>Jordan Spieth +1
-+1 thru 7</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
+      <td>Patrick Cantlay +1
 +1 thru 8</td>
-      <td class="greyout">Collin Morikawa +2
+      <td class="greyout leftborder">Collin Morikawa +2
 +2 thru 9</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 8</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">1</td>
+      <td>Corey Conners(W) -1
+-1 thru 12</td>
+      <td>Daniel Berger -1
+-1 (F)</td>
+      <td>Jon Rahm +1
++1 thru 8</td>
+      <td>Collin Morikawa +2
++2 thru 9</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 8</td>
+      <td class="greyout">Robert MacIntyre +2
++2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
@@ -364,22 +364,6 @@ E thru 7</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">2</td>
-      <td>Corey Conners -1
--1 thru 12</td>
-      <td>Jon Rahm +1
-+1 thru 8</td>
-      <td>Xander Schauffele +1
-+1 thru 8</td>
-      <td>Jordan Spieth +1
-+1 thru 7</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-+4 (F)</td>
-      <td class="greyout">Louis Oosthuizen +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">3</td>
       <td>Viktor Hovland(W) E
@@ -394,6 +378,22 @@ E thru 7</td>
 +3 thru 12</td>
       <td class="greyout">Luke List +5
 +5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Adam Ryan</td>
+      <td class="bigbold">3</td>
+      <td>Corey Conners -1
+-1 thru 12</td>
+      <td>Jon Rahm +1
++1 thru 8</td>
+      <td>Xander Schauffele +1
++1 thru 8</td>
+      <td>Jordan Spieth +2
++2 thru 8</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
++4 (F)</td>
+      <td class="greyout">Louis Oosthuizen +4
++4 (F)</td>
     </tr>
   </tbody>
 </table>
