--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:42:14 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 4:42:57 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -163,7 +163,7 @@ body {
       <td>Joaquin Niemann -3
 -3 (F)</td>
       <td>Viktor Hovland E
-E thru 7</td>
+E thru 8</td>
       <td>Rory McIlroy E
 E thru 7</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
@@ -205,15 +205,15 @@ E thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-6</td>
       <td>Scottie Scheffler(W) -4
 -4 thru 17</td>
       <td>Will Zalatoris -2
 -2 thru 8</td>
+      <td>Jon Rahm E
+E thru 9</td>
       <td>Brooks Koepka E
 E thru 7</td>
-      <td>Jon Rahm +1
-+1 thru 8</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
       <td class="greyout">Jordan Spieth +2
@@ -243,7 +243,7 @@ E thru 7</td>
       <td>Corey Conners -1
 -1 thru 12</td>
       <td>Viktor Hovland E
-E thru 7</td>
+E thru 8</td>
       <td>Xander Schauffele +1
 +1 thru 8</td>
       <td class="greyout leftborder">Jordan Spieth +2
@@ -268,6 +268,22 @@ E thru 7</td>
 +2 thru 9</td>
     </tr>
     <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">-3</td>
+      <td>Dustin Johnson -3
+-3 thru 9</td>
+      <td>Viktor Hovland E
+E thru 8</td>
+      <td>Brooks Koepka E
+E thru 7</td>
+      <td>Jon Rahm E
+E thru 9</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
++1 thru 8</td>
+      <td class="greyout">Jordan Spieth(W) +2
++2 thru 8</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">-2</td>
       <td>Dustin Johnson -3
@@ -289,7 +305,7 @@ E thru 7</td>
       <td>Sungjae Im -3
 -3 thru 10</td>
       <td>Viktor Hovland(W) E
-E thru 7</td>
+E thru 8</td>
       <td>Brooks Koepka E
 E thru 7</td>
       <td>Patrick Cantlay +1
@@ -300,30 +316,14 @@ E thru 7</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-2</td>
-      <td>Dustin Johnson -3
--3 thru 9</td>
-      <td>Viktor Hovland E
-E thru 7</td>
-      <td>Brooks Koepka E
-E thru 7</td>
-      <td>Patrick Cantlay +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Jon Rahm +1
-+1 thru 8</td>
-      <td class="greyout">Jordan Spieth(W) +2
-+2 thru 8</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Tony Finau -1
 -1 thru 17</td>
+      <td>Jon Rahm(W) E
+E thru 9</td>
       <td>Brooks Koepka E
 E thru 7</td>
-      <td>Jon Rahm(W) +1
-+1 thru 8</td>
       <td>Patrick Cantlay +1
 +1 thru 8</td>
       <td class="greyout leftborder">Collin Morikawa +2
@@ -333,13 +333,13 @@ E thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Corey Conners(W) -1
 -1 thru 12</td>
       <td>Daniel Berger -1
 -1 (F)</td>
-      <td>Jon Rahm +1
-+1 thru 8</td>
+      <td>Jon Rahm E
+E thru 9</td>
       <td>Collin Morikawa +2
 +2 thru 9</td>
       <td class="greyout leftborder">Jordan Spieth +2
@@ -349,11 +349,11 @@ E thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">1</td>
       <td>Corey Conners -1
 -1 thru 12</td>
-      <td>Jon Rahm +1
-+1 thru 8</td>
+      <td>Jon Rahm E
+E thru 9</td>
       <td>Patrick Cantlay +1
 +1 thru 8</td>
       <td>Tyrrell Hatton +1
@@ -365,13 +365,13 @@ E thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Viktor Hovland(W) E
-E thru 7</td>
+E thru 8</td>
+      <td>Jon Rahm E
+E thru 9</td>
       <td>Brooks Koepka E
 E thru 7</td>
-      <td>Jon Rahm +1
-+1 thru 8</td>
       <td>Collin Morikawa +2
 +2 thru 9</td>
       <td class="greyout leftborder">Patrick Reed +3
@@ -381,11 +381,11 @@ E thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Corey Conners -1
 -1 thru 12</td>
-      <td>Jon Rahm +1
-+1 thru 8</td>
+      <td>Jon Rahm E
+E thru 9</td>
       <td>Xander Schauffele +1
 +1 thru 8</td>
       <td>Jordan Spieth +2
